--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ import(parallel)
 importFrom(MASS,ginv)
 importFrom(reshape2,melt)
 importFrom(stats,cov)
+importFrom(stats,density)
 importFrom(stats,dnorm)
 importFrom(stats,pnorm)
 importFrom(stats,rnorm)
+importFrom(utils,tail)
